--- a/GeoApp/ClientApp/src/index.html
+++ b/GeoApp/ClientApp/src/index.html
@@ -6,7 +6,7 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="./assets/favicon_logo.ico">
+  <link rel="icon" type="image/x-icon" href="./assets/favicom_new.png">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
